Update CORS configuration to allow origin patterns, add exposed headers, and set max age